# api/gen/http/foo_service/server/encode_decode.go
@@ -36,7 +36,7 @@ func EncodeFooMethodResponse(encoder func(context.Context, http.ResponseWriter) 
 func DecodeFooMethodRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (interface{}, error) {
 	return func(r *http.Request) (interface{}, error) {
 		var (
-			body FooMethodRequestBody
+			body []*ExampleTypeRequestBody
 			err  error
 		)
 		err = decoder(r).Decode(&body)
@@ -46,19 +46,26 @@ func DecodeFooMethodRequest(mux goahttp.Muxer, decoder func(*http.Request) goaht
 			}
 			return nil, goa.DecodePayloadError(err.Error())
 		}
-		err = ValidateFooMethodRequestBody(&body)
-		if err != nil {
-			return nil, err
-		}
-		payload := NewFooMethodExampleType(&body)
+		payload := NewFooMethodExampleType(body)
 
 		return payload, nil
 	}
 }
 
-// unmarshalExternalTypeRequestBodyToTypesExternalType builds a value of type
-// *types.ExternalType from a value of type *ExternalTypeRequestBody.
-func unmarshalExternalTypeRequestBodyToTypesExternalType(v *ExternalTypeRequestBody) *types.ExternalType {
+// unmarshalExampleTypeRequestBodyToFooserviceExampleType builds a value of
+// type *fooservice.ExampleType from a value of type *ExampleTypeRequestBody.
+func unmarshalExampleTypeRequestBodyToFooserviceExampleType(v *ExampleTypeRequestBody) *fooservice.ExampleType {
+	res := &fooservice.ExampleType{}
+	if v.External != nil {
+		res.External = unmarshalTypesExternalTypeRequestBodyToTypesExternalType(v.External)
+	}
+
+	return res
+}
+
+// unmarshalTypesExternalTypeRequestBodyToTypesExternalType builds a value of
+// type *types.ExternalType from a value of type *types.ExternalTypeRequestBody.
+func unmarshalTypesExternalTypeRequestBodyToTypesExternalType(v *types.ExternalTypeRequestBody) *types.ExternalType {
 	if v == nil {
 		return nil
 	}
