# api/gen/http/openapi3.yaml
@@ -17,10 +17,21 @@ paths:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/FooMethodRequestBody'
+                            type: array
+                            items:
+                                $ref: '#/components/schemas/ExampleType'
+                            example:
+                                - External:
+                                    Field: Nisi molestiae suscipit voluptates voluptates.
+                                - External:
+                                    Field: Nisi molestiae suscipit voluptates voluptates.
                         example:
-                            External:
-                                Field: Eos quisquam et nisi molestiae.
+                            - External:
+                                Field: Nisi molestiae suscipit voluptates voluptates.
+                            - External:
+                                Field: Nisi molestiae suscipit voluptates voluptates.
+                            - External:
+                                Field: Nisi molestiae suscipit voluptates voluptates.
             responses:
                 "200":
                     description: OK response.
@@ -29,40 +40,42 @@ paths:
                             schema:
                                 type: array
                                 items:
-                                    $ref: '#/components/schemas/FooMethodRequestBody'
+                                    $ref: '#/components/schemas/ExampleType'
                                 example:
                                     - External:
-                                        Field: Voluptates voluptates quia non.
+                                        Field: Quasi ut mollitia id similique facilis corrupti.
                                     - External:
-                                        Field: Voluptates voluptates quia non.
+                                        Field: Quasi ut mollitia id similique facilis corrupti.
+                                    - External:
+                                        Field: Quasi ut mollitia id similique facilis corrupti.
+                                    - External:
+                                        Field: Quasi ut mollitia id similique facilis corrupti.
                             example:
                                 - External:
-                                    Field: Voluptates voluptates quia non.
+                                    Field: Quasi ut mollitia id similique facilis corrupti.
                                 - External:
-                                    Field: Voluptates voluptates quia non.
+                                    Field: Quasi ut mollitia id similique facilis corrupti.
                                 - External:
-                                    Field: Voluptates voluptates quia non.
-                                - External:
-                                    Field: Voluptates voluptates quia non.
+                                    Field: Quasi ut mollitia id similique facilis corrupti.
 components:
     schemas:
-        ExternalType:
-            type: object
-            properties:
-                Field:
-                    type: string
-                    example: Non omnis.
-            example:
-                Field: Numquam delectus ut excepturi dolorem autem.
-            required:
-                - Field
-        FooMethodRequestBody:
+        ExampleType:
             type: object
             properties:
                 External:
                     $ref: '#/components/schemas/ExternalType'
             example:
                 External:
-                    Field: Eos quisquam et nisi molestiae.
+                    Field: Nisi molestiae suscipit voluptates voluptates.
+        ExternalType:
+            type: object
+            properties:
+                Field:
+                    type: string
+                    example: Eum voluptatem et blanditiis tempora.
+            example:
+                Field: Laborum illo distinctio rerum quisquam.
+            required:
+                - Field
 tags:
     - name: FooService
